--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,44 @@
  *= require_tree .
  *= require_self
  */
+
+ h1 {
+  margin-left: 20px;
+  font-size: 40px;
+  opacity: 0.7;
+ }
+
+.container * {
+  margin-top: 40px;
+  margin-left: 40px;
+  font-size: 20px;
+  position: relative;
+}
+
+.container *::before {
+  content: ' ';
+  position: absolute;
+  height: 100%;
+  background-color: rgba(182, 178, 178, 0.3);
+  left: -20px;
+  width: 10px;
+}
+
+.ask {
+  padding-left: 10px;
+}
+
+.answer {
+  padding-left: 10px;
+  background-color: rgba(218, 150, 97, 0.3);
+}
+
+.btn {
+  font-size: 20px;
+  margin: 40px 0 0 20px;
+}
+
+.btn a {
+  text-decoration: none;
+  color: blue;
+}
