--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,6 +20,34 @@
   opacity: 0.7;
  }
 
+ p{
+  opacity:0.7;
+  font-size: 18px;
+ }
+
+ .text {
+  padding-left: 20px;
+  width: 800px;
+  height: 50px;
+  border-radius: 10px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+ }
+
+ form {
+  display: flex;
+  align-items: center;
+ }
+
+ .submit {
+  height: 50px;
+  width: 100px;
+  background-color: blue;
+  color: white;
+  font-size: 26px;
+  border-radius: 5px;
+
+ }
+
 .container * {
   margin-top: 40px;
   margin-left: 40px;
