--- a/app/views/questions/about.html.erb
+++ b/app/views/questions/about.html.erb
@@ -1,4 +1,8 @@
+<h1>Stupid Coaching</h1>
+
+<p>Ask yout coach anything:</p>
+
 <form action="/answer" method="get">
-  <input type="text" name="ask" placeholder="What is your question ?">
-  <input type="submit" value="ask">
+  <input type="text" name="ask" placeholder="What is your question ?" class="text">
+  <input type="submit" value="ask" class="submit">
 </form>
